<resources>
    <string name="app_name">IMAD_QUIZ</string>
    <string name="feedback_correct">Correct! %1$s</string>
    <string name="feedback_wrong">Wrong! %1$s</string>
    <string name="final_score_format">Final Score: %1$d / %2$d</string>
    <string name="welcome_title">Life Hack or Urban Myth?</string>
    <string name="btn_start">Start Quiz</string>
    <string name="btn_true">Hack (True)</string>
    <string name="btn_false">Myth (False)</string>
    <string name="btn_next">Next</string>
    <string name="btn_restart">Restart Quiz</string>
    <string name="txt_question_placeholder">Question text</string>
    <string name="txt_score_placeholder">Final Score</string>
</resources>